<resources>
    <string name="app_name" translatable="false">Eco Garden</string>
    <string name="explain_me_text">(Por quê?)</string>
    <string name="next_btn">PRÓXIMO</string>
    <string name="back_btn">VOLTAR</string>
    <string name="cancel_btn">CANCELAR</string>
    <string name="create_btn">CRIAR</string>
    <string name="finish_btn">FINALIZAR</string>
    <string name="save_btn">SALVAR</string>
    <string name="delete_btn">EXCLUIR</string>
    <string name="edit_btn">EDITAR</string>
    <string name="logo_description" translatable="false">logo</string>
    <string name="theme_icon_description" translatable="false">theme</string>
    <string name="checkbox_description" translatable="false">checkbox</string>
    <string name="full_screen_image_description" translatable="false">full screen image description</string>
    <string name="login_email_title" translatable="false">E-mail</string>
    <string name="login_password_title">Senha</string>
    <string name="login_logo_title">Entre na sua conta</string>
    <string name="login_btn">ENTRAR</string>
    <string name="login_signup_btn">NÃO TENHO UMA CONTA</string>
    <string name="login_failed">Login falhou, tente novamente.</string>
    <string name="signup_email_title" translatable="false">E-mail</string>
    <string name="signup_password_title">Senha</string>
    <string name="signup_logo_title">Crie a sua conta</string>
    <string name="signup_btn">CRIAR</string>
    <string name="signup_signup_btn">JÁ TENHO UMA CONTA</string>
    <string name="signup_failed">Cadastro falhou, tente novamente.</string>
    <string name="home_logo_title" translatable="false">ECO GARDEN</string>
    <string name="home_btn_create_environment">NOVO AMBIENTE</string>
    <string name="home_btn_access_environments">AMBIENTES</string>
    <string name="home_logout_btn">SAIR DA CONTA</string>
    <string name="manage_environment_title">NOVO AMBIENTE</string>
    <string name="manage_environment_edit_title">EDITAR AMBIENTE</string>
    <string name="manage_environment_place_subtitle">LOCAL DE PLANTIO</string>
    <string name="manage_environment_place_closed_environments_text">Ambiente fechado (Casas, Quintais…)</string>
    <string name="manage_environment_place_open_environments_text">Open environment (Parques, Florestas…)</string>
    <string name="manage_environment_place_biome">BIOMA</string>
    <string name="manage_environment_place_picture_text">Foto do ambiente</string>
    <string name="manage_environment_goal_subtitle">OBJETIVO</string>
    <string name="manage_environment_goal_aesthetic_option">Ambiente bonito</string>
    <string name="manage_environment_goal_air_option">Filtragem de ar</string>
    <string name="manage_environment_goal_medicinal_option">Plantas medicinais</string>
    <string name="manage_environment_goal_spices_option">Temperos</string>
    <string name="manage_environment_plants_subtitle">PLANTAS</string>
    <string name="manage_environment_plants_create_plant_btn">+ NOVA PLANTA</string>
    <string name="manage_environment_plants_plants_title">PLANTAS</string>
    <string name="new_plant_subtitle">PLANTA</string>
    <string name="new_plant_search">BUSCAR PLANTA</string>
    <string name="new_plant_name">NOME (*)</string>
    <string name="new_plant_humidity">UMIDADE</string>
    <string name="new_plant_ph">pH</string>
    <string name="new_plant_light_intensity">INTENSIDADE DE LUZ</string>
    <string name="new_plant_light_duration">DURAÇÃO DA LUZ</string>
    <string name="new_plant_soil_conductivity">CONDUTIVIDADE DO SOLO</string>
    <string name="new_plant_soil_salinity">SALINIDADE DO SOLO</string>
    <string name="new_plant_temperature">TEMPERATURA</string>
    <string name="new_plant_search_hint">Nome</string>
    <string name="new_plant_name_hint">Nome da Planta</string>
    <string name="new_plant_humidity_hint">Umidade</string>
    <string name="new_plant_ph_hint">0</string>
    <string name="new_plant_light_intensity_hint">Intensidade</string>
    <string name="new_plant_light_duration_hint">0h</string>
    <string name="new_plant_soil_conductivity_hint">0 (µS/cm)</string>
    <string name="new_plant_soil_salinity_hint">0 (mg/L)</string>
    <string name="new_plant_temperature_hint">0 (°C)</string>
    <string name="manage_environment_timetables_time_hint" translatable="false">00:00</string>
    <string name="manage_environment_timetables_subtitle">HORÁRIOS</string>
    <string name="manage_environment_timetables_create_plant_btn">+ NOVO HORÁRIO</string>
    <string name="manage_environment_timetables_timetables_title">HORÁRIOS</string>
    <string name="manage_environment_timetables_times_between">até</string>
    <string name="new_timetable_subtitle">HORÁRIO</string>
    <string name="new_timetable_start">INÍCIO</string>
    <string name="new_timetable_finish">TÉRMINO</string>
    <string name="environments_title">ENVIRONMENTS</string>
    <string name="manage_environment_name_subtitle">NOME DO AMBIENTE</string>
    <string name="manage_environment_name">Nome</string>
    <string name="environment_main_gallery_btn">GALERIA</string>
    <string name="environment_main_tasks_btn">TAREFAS</string>
    <string name="environment_main_soil">SOLO</string>
    <string name="environment_main_soil_ph">pH</string>
    <string name="environment_main_soil_conductivity">Condutividade</string>
    <string name="environment_main_soil_salinity">Salinidade</string>
    <string name="environment_main_soil_humidity">Umidade</string>
    <string name="environment_main_weather">TEMPO</string>
    <string name="environment_main_weather_temperature">Temperatura</string>
    <string name="environment_main_weather_light_intensity">Intensidade da Luz</string>
    <string name="environment_main_plant_light_duration">DURAÇÃO DA LUZ</string>
    <string name="environment_main_plant_light_intensity">INTENSIDADE DA LUZ</string>
    <string name="environment_main_plant_soil_humidity">UMIDADE DO SOLO</string>
    <string name="environment_main_plant_ph" translatable="false">pH</string>
    <string name="environment_main_plant_soil_conductivity">CONDUTIVIDADE DO SOLO</string>
    <string name="environment_main_plant_soil_salinity">SALINIDADE DO SOLO</string>
    <string name="environment_main_plant_air_temperature">TEMPERATURA</string>
    <string name="environment_main_refresh_data">ATUALIZAR INFORMAÇÕES</string>
    <string name="environment_main_synchronize_prototipe">SINCRONIZAR PROTÓTIPO</string>
    <string name="environment_main_no_internet_text">Falha ao carregar dados. Verifique sua conexão com a internet.</string>
    <string name="edit_plant_subtitle">EDITAR PLANTA</string>
    <string name="edit_plant_name">NOME</string>
    <string name="edit_plant_humidity">UMIDADE DO SOLO</string>
    <string name="edit_plant_ph">pH</string>
    <string name="edit_plant_light_intensity">INTENSIDADE DA LUZ</string>
    <string name="edit_plant_light_duration">DURAÇÃO DA LUZ</string>
    <string name="edit_plant_soil_conductivity">CONDUTIVIDADE DO SOLO</string>
    <string name="edit_plant_soil_salinity">SALINIDADE DO SOLO</string>
    <string name="edit_plant_temperature">TEMPERATURA</string>
    <string name="environment_gallery_title">GALERIA</string>
    <string name="environment_gallery_subtitle">GALERIA</string>
    <string name="environment_gallery_add_new_picture">+ ADICIONAR FOTO</string>
    <string name="environment_tasks_history">HISTÓRICO</string>
    <string name="environment_tasks_manage_tasks">GERENCIAR TAREFAS</string>
    <string name="environment_tasks_sunday">DOMINGO</string>
    <string name="environment_tasks_monday">SEGUNDA</string>
    <string name="environment_tasks_tuesday">TERÇA</string>
    <string name="environment_tasks_wednesday">QUARTA</string>
    <string name="environment_tasks_thursday">QUINTA</string>
    <string name="environment_tasks_friday">SEXTA</string>
    <string name="environment_tasks_saturday">SÁBADO</string>
    <string name="environment_tasks_history_subtitle">HISTÓRICO</string>
    <string name="environment_tasks_history_tasks_deleted_task_name">Tarefa excluída!</string>
    <string name="environment_tasks_manage_tasks_tasks">TAREFAS</string>
    <string name="environment_tasks_manage_tasks_subtitle">GERENCIAR TAREFAS</string>
    <string name="environment_tasks_create_task_subtitle">NOVA TAREFA</string>
    <string name="environment_tasks_create_task_name">NOME</string>
    <string name="environment_tasks_create_task_sunday">Domingo</string>
    <string name="environment_tasks_create_task_monday">Segunda</string>
    <string name="environment_tasks_create_task_tuesday">Terça</string>
    <string name="environment_tasks_create_task_wednesday">Quarta</string>
    <string name="environment_tasks_create_task_thursday">Quinta</string>
    <string name="environment_tasks_create_task_friday">Sexta</string>
    <string name="environment_tasks_create_task_saturday">Sábado</string>
    <string name="environment_edit_environment">EDITAR AMBIENTE</string>
    <string name="environment_delete">EXCLUIR AMBIENTE</string>
    <string-array name="biomes_array">
        <item>Amazônia</item>
        <item>Cerrado</item>
        <item>Caatinga</item>
        <item>Mata Atlântica</item>
        <item>Pantanal</item>
    </string-array>
    <string name="biome_explain_me_title">Por que informar o bioma?</string>
    <string name="biome_explain_me_message">É necessário informar o bioma em casos de ambientes abertos, pois isso permite evitar infortúnios nos ecossistemas locais.</string>
    <string name="picture_explain_me_title">Por que adicionar uma foto?</string>
    <string name="picture_explain_me_message">É interessante tirar fotos da evolução de seu jardim, para observar padrões e apreciar seu crescimento.</string>
    <string-array name="light_intensity_array">
        <item>Forte</item>
        <item>Moderada</item>
        <item>Fraca</item>
    </string-array>
    <string name="light_intensity_low">Fraca</string>
    <string name="light_intensity_medium">Moderada</string>
    <string name="light_intensity_strong">Forte</string>
    <string-array name="humidity_array">
        <item>Úmido</item>
        <item>Seco</item>
    </string-array>
    <string name="humidity_low">Seco</string>
    <string name="humidity_high">Úmido</string>
    <string name="required_name">Nome é obrigatório!</string>
    <string name="plant_already_exists">Esta planta já foi criada!</string>
    <string name="timetable_already_exists">Este horário já foi cadastrado!</string>
    <string name="closed_required">Especifique se o ambiente é aberto ou fechado!</string>
    <string name="camera_permission_denied">Permissão negada!</string>
    <string name="delete_environment_confirmation">Você tem certeza que deseja excluir esse ambiente?</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sim</string>
    <string name="environment_plant_undefined">Sem informações</string>
    <string name="humidity_good">Boa</string>
    <string name="humidity_bad">Ruim</string>
    <string name="humidity_very_bad">Muito Ruim</string>
    <string name="light_intensity_good">Boa</string>
    <string name="light_intensity_bad">Ruim</string>
    <string name="light_intensity_very_bad">Muito Ruim</string>
    <string name="ph_good">Bom</string>
    <string name="ph_less">Abaixo</string>
    <string name="ph_more">Acima</string>
    <string name="temperature_good">Bom</string>
    <string name="temperature_less">Abaixo</string>
    <string name="temperature_more">Acima</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>