<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/home_logo_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_logo_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_create_Environment"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="@dimen/btn_margin"
            android:background="@drawable/default_button"
            android:text="@string/home_btn_create_environment"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_access_Environments"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="@dimen/btn_margin"
            android:background="@drawable/default_button"
            android:enabled="false"
            android:text="@string/home_btn_access_environments"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="@dimen/small_btn_width"
            android:layout_height="@dimen/small_btn_height"
            android:layout_margin="@dimen/btn_margin"
            android:background="@drawable/cancel_button"
            android:text="SAIR DA CONTA"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/theme"
            android:layout_width="@dimen/home_theme_icon_width"
            android:layout_height="@dimen/home_theme_icon_height"
            android:layout_gravity="end"
            android:layout_margin="@dimen/home_theme_icon_margin"
            android:contentDescription="@string/theme_icon_description"
            android:src="@drawable/theme_icon" />
    </LinearLayout>

</LinearLayout>